# jquants-data-viewer

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md
.claude/: launch.json  settings.json
backend/: pyproject.toml  ruff.toml
backend/app/: config.py  main.py
backend/app/db/: connection.py
backend/app/models/: financial.py  sector.py  stock.py
backend/app/routers/: compare.py  financials.py  indices.py  sectors.py  stocks.py
backend/tests/: test_routers.py
docs/: IMPROVEMENTS.md
docs/adr/: 0001-backend-framework.md  0002-query-engine.md  0003-frontend-stack.md  0004-api-contract.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  store.ts
frontend/src/api/: client.ts  types.ts
frontend/src/components/: StockPicker.tsx
frontend/src/components/charts/: LineChart.tsx  OhlcChart.tsx
frontend/src/views/: CompareView.tsx  FinancialView.tsx  SectorView.tsx  StockView.tsx
